have a basic version running

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="mainDiv">
             <div id="divA">a</div>
             <div id="divB">b</div>
-            <div id="divC" class="divHeight125">c</div>
-            <div id="divD" class="divHeight125">d</div>
+            <div id="divC" class="divCD">c</div>
+            <div id="divD" class="divCD">d</div>
             <div class="halfWidthSection">
                 <div id="divE" class="halfWidth">e</div>
                 <div id="divF" class="halfWidthRight">f</div>
