gave each box a different color and changed them for desktop v mobile

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <body>
     <header>
-        <div id="pageTitle">
-            mobile: 480px - 767px
-        </div>
+        <h1 id="pageTitle">mobile: 480px - 767px</h1>
     </header>
     <main>
         <div id="mainDiv">
