--- a/index.html
+++ b/index.html
@@ -18,14 +18,10 @@
             <div id="divB">b</div>
             <div id="divC" class="divCD">c</div>
             <div id="divD" class="divCD">d</div>
-            <div class="halfWidthSection">
-                <div id="divE" class="halfWidth">e</div>
-                <div id="divF" class="halfWidthRight">f</div>
-            </div>
-            <div class="halfWidthSection">
-                <div id="divG" class="halfWidth">g</div>
-                <div id="divH" class="halfWidthRight">h</div>
-            </div>
+            <div id="divE" class="halfWidth">e</div>
+            <div id="divF" class="halfWidth">f</div>
+            <div id="divG" class="halfWidth">g</div>
+            <div id="divH" class="halfWidth">h</div>
             <div id="divI">i</div>
         </div>
     </main>
